# autodoc

./: .flake8  .gitignore  .libcst.codemod.yaml  README.md  pyproject.toml
.github/workflows/: build.yml
etc/undocumented/: nodoc.py
notebooks/: code-t5-plus.ipynb  sandbox.ipynb  starcode.ipynb
src/autodocstr/: __main__.py  backends.py
src/autodocstr/codemod/: commands.py
test/: test_autodoc.py
