[tool.poetry]
name = "autodocstr"
version = "0.1.1a0"
description = "A powerful utility that generate documentation for your python project"
authors = ["Fabrizio (Misto) Milo <mistobaan@gmail.com>"]
license = "APACHE-2.0"
readme = "README.md"
homepage = "https://github.com/neuroarchitect/autodoc"
repository = "https://github.com/neuroarchitect/autodoc"
keywords = ["tools", "autodoc", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
libcst = "^0.4.9"
black = "^23.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.2.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.black]
line-length = 120

[tool.poetry.scripts]
autodocstr = "autodocstr.__main__:main"
